--- Auto-Git Commit ---

--- a/Hided/Kubernetes/Kubernetes权威指南/第2章 Kubernetes安装配置指南/1. 系统要求.md
+++ b/Hided/Kubernetes/Kubernetes权威指南/第2章 Kubernetes安装配置指南/1. 系统要求.md
@@ -3,10 +3,10 @@
 
 <!-- code_chunk_output -->
 
-- [基本配置](#基本配置)
-- [docker安装](#docker安装)
-- [修改docker cgroup driver为systemd](#修改docker-cgroup-driver为systemd)
-- [3 kube\-proxy开启ipvs的前置条件(可选)](#3-kube-proxy开启ipvs的前置条件可选)
+- [1. 基本配置](#1-基本配置)
+- [2. docker安装](#2-docker安装)
+- [3. 修改docker cgroup driver为systemd](#3-修改docker-cgroup-driver为systemd)
+- [4. kube-proxy开启ipvs的前置条件(可选)](#4-kube-proxy开启ipvs的前置条件可选)
 
 <!-- /code_chunk_output -->
 
@@ -22,7 +22,7 @@ Kubernetes需要**容器运行时（Container Runtime Interface，CRI**）的支
 
 需要注意的是，CentOS Linux 7默认启动了防火墙服务（firewalld），而Kubernetes的**Master**与**工作Node**之间会有大量的**网络通信**，安全的做法是在**防火墙上配置各组件需要相互通信的端口号**，具体要配置的端口号详见2.8节各服务启动参数中监听的端口号。
 
-# 基本配置
+# 1. 基本配置
 
 修改主机名, 添加/etc/hosts, 添加ssh\-key
 
@@ -71,7 +71,7 @@ sysctl -p /etc/sysctl.d/k8s.conf
 sysctl --system
 ```
 
-# docker安装
+# 2. docker安装
 
 Kubernetes从1.6开始使用CRI(Container Runtime Interface)容器运行时接口。默认的容器运行时仍然是Docker，使用的是kubelet中内置**dockershim CRI**实现。
 
@@ -194,7 +194,7 @@ Chain FORWARD (policy ACCEPT 0 packets, 0 bytes)
     0     0 REJECT     all  --  virbr0 *       0.0.0.0/0            0.0.0.0/0            reject-with icmp-port-unreachable
 ```
 
-# 修改docker cgroup driver为systemd
+# 3. 修改docker cgroup driver为systemd
 
 根据文档[CRI installation](https://kubernetes.io/docs/setup/cri/)中的内容，对于使用systemd作为init system的Linux的发行版，使用systemd作为docker的cgroup driver可以确保服务器节点在资源紧张的情况更加稳定，因此这里修改各个节点上docker的cgroup driver为systemd。
 
@@ -215,7 +215,7 @@ Chain FORWARD (policy ACCEPT 0 packets, 0 bytes)
 Cgroup Driver: systemd
 ```
 
-# 3 kube\-proxy开启ipvs的前置条件(可选)
+# 4. kube-proxy开启ipvs的前置条件(可选)
 
 由于ipvs已经加入到了内核的主干，所以为kube\-proxy开启ipvs的前提需要加载以下的内核模块
 
