--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -4,6 +4,17 @@
 
 通过`kvm_vm_ioctl(KVM_SET_USER_MEMORY_REGION)`实现
 
+本质是创建并填充了一个临时kvm_memslots结构，并把其赋值给kvm->memslots（全局的）。
+
+# 处理用户态虚拟地址
+
+https://blog.csdn.net/jinzhuojun/article/details/8147463
+
+# KVM同步脏页位图到Qemu
+
+https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F%E9%A1%B5%E4%BD%8D%E5%9B%BE/
+
+
 插播qemu对内存条的模拟管理，是通过`RAMBlock`和`ram_list`管理的，**RAMBlock**就是**每次申请的内存池**，`ram_list`则是RAMBlock的**链表**，他们结构如下：
 
 ```cpp
