--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -22,6 +22,8 @@ qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设
 
 本文简介ioctl vm指令KVM_SET_USER_MEMORY_REGION在内核中的执行流程，qemu-kvm用户态部分暂不包括。
 
+本质是创建并填充了一个临时kvm_memslots结构，并把其赋值给kvm->memslots（全局的）。
+
 # 基本流程
 
 ioctl vm指令`KVM_SET_USER_MEMORY_REGION`在内核主要执行流程如下：
