--- Auto-Git Commit ---

--- a/Virtualization/KVM/1. Summary/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/KVM/1. Summary/4. KVM内核模块重要的数据结构.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. KVM结构体](#1-kvm结构体)
+- [1. KVM结构体: 一个虚拟机](#1-kvm结构体-一个虚拟机)
 - [2. kvm_vcpu结构体](#2-kvm_vcpu结构体)
   - [2.1. kvm_run结构体](#21-kvm_run结构体)
   - [2.2. kvm_vcpu_arch](#22-kvm_vcpu_arch)
@@ -16,7 +16,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1. KVM结构体
+# 1. KVM结构体: 一个虚拟机
 
 **KVM 结构体**在 KVM 的系统架构中**代表一个具体的虚拟机**。
 
