--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -40,10 +40,33 @@ kvm_vm_ioctl()
 
 # 代码分析
 
+
+
 ```cpp
 // include/linux/kvm_host.h
 struct kvm {
+        struct kvm_memslots *memslots[KVM_ADDRESS_SPACE_NUM];
 ```
+
+一个`struct kvm`代表一个虚拟机, memslots是所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`, 用于将**GPA转换为HVA**. 
+
+```cpp
+/*
+ * Note:
+ * memslots are not sorted by id anymore, please use id_to_memslot()
+ * to get the memslot by its id.
+ */
+struct kvm_memslots {
+        u64 generation;
+        /* The mapping table from slot id to the index in memslots[]. */
+        short id_to_index[KVM_MEM_SLOTS_NUM];
+        atomic_t lru_slot;
+        int used_slots;
+        struct kvm_memory_slot memslots[];
+};
+```
+
+获取
 
 ## kvm_mem_slot 结构体: GPA到HVA的映射关系
 
@@ -285,7 +308,24 @@ EXPORT_SYMBOL_GPL(__kvm_set_memory_region);
 
 check_memory_region_flags检查`mem->flags`是否合法，而当前flag也就使用了两位，`KVM_MEM_LOG_DIRTY_PAGES`和`KVM_MEM_READONLY`, 从qemu传过来的只能是`KVM_MEM_LOG_DIRTY_PAGES`
 
-`id_to_memslot`则是根据**qemu的内存槽号**得到kvm结构下的内存槽号，转换关系来自id_to_index数组，那映射关系怎么来的，映射关系是**一一对应**的，在kvm_create_vm虚拟机创建过程中，`kvm_init_memslots_id`初始化对应关系，即`slots->id_to_index[i] = slots->memslots[i].id = i`，当前映射是没有意义的，估计是为了后续扩展而存在的。
+`id_to_memslot`则是根据**qemu的内存槽号i**得到**kvm结构下的内存槽号**，转换关系来自`id_to_index`数组，那映射关系怎么来的，映射关系是**一一对应**的，在kvm_create_vm虚拟机创建过程中，`kvm_init_memslots_id`初始化对应关系，即`slots->id_to_index[i] = slots->memslots[i].id = i`，当前映射是没有意义的，估计是为了后续扩展而存在的。
+
+```cpp
+static inline
+struct kvm_memory_slot *id_to_memslot(struct kvm_memslots *slots, int id)
+{
+        int index = slots->id_to_index[id];
+        struct kvm_memory_slot *slot;
+
+        if (index < 0)
+                return NULL;
+
+        slot = &slots->memslots[index];
+
+        WARN_ON(slot->id != id);
+        return slot;
+}
+```
 
 每次调用**设置一个内存区间**。内存区域可以**不连续**(实际的物理内存区域也经常不连续，因为有可能有保留内存)
 
