--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -6,7 +6,8 @@
 - [基本原理](#基本原理)
 - [基本流程](#基本流程)
 - [代码分析](#代码分析)
-  - [kvm_mem_slot 结构体: GPA到HVA的映射关系](#kvm_mem_slot-结构体-gpa到hva的映射关系)
+  - [](#)
+  - [kvm_mem_slot 结构体: 一段空间虚拟机GPA到主机HVA的映射关系](#kvm_mem_slot-结构体-一段空间虚拟机gpa到主机hva的映射关系)
   - [kvm_vm_ioctl(): vm指令入口](#kvm_vm_ioctl-vm指令入口)
 - [参考](#参考)
 
@@ -22,7 +23,7 @@ qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设
 
 本文简介ioctl vm指令KVM_SET_USER_MEMORY_REGION在内核中的执行流程，qemu-kvm用户态部分暂不包括。
 
-本质是创建并填充了一个临时kvm_memslots结构，并把其赋值给kvm->memslots（全局的）。
+本质是创建并填充了一个临时`kvm_memslots`结构，并把其赋值给`kvm->memslots`（全局的）。
 
 # 基本流程
 
@@ -40,15 +41,15 @@ kvm_vm_ioctl()
 
 # 代码分析
 
-
+## 
 
 ```cpp
 // include/linux/kvm_host.h
 struct kvm {
-        struct kvm_memslots *memslots[KVM_ADDRESS_SPACE_NUM];
+        struct kvm_memslots __rcu *memslots[KVM_ADDRESS_SPACE_NUM];
 ```
 
-一个`struct kvm`代表一个虚拟机, memslots是所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`, 用于将**GPA转换为HVA**. 
+一个`struct kvm`代表一个虚拟机, memslots是该虚拟机所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`(这里是1), 用于将**GPA转换为HVA**. 
 
 ```cpp
 /*
@@ -66,11 +67,13 @@ struct kvm_memslots {
 };
 ```
 
-获取
+kvm_memslots
 
-## kvm_mem_slot 结构体: GPA到HVA的映射关系
+获取某一个`kvm_memory_slot`, 通过`id_to_memslot(struct kvm_memslots *slots, int id)`实现.
 
-由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**
+## kvm_mem_slot 结构体: 一段空间虚拟机GPA到主机HVA的映射关系
+
+由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
 ```cpp
 struct kvm_rmap_head {
