--- Auto-Git Commit ---

--- a/Virtualization/KVM/1. Summary/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/KVM/1. Summary/4. KVM内核模块重要的数据结构.md
@@ -108,9 +108,7 @@ struct kvm {
 
 KVM虚拟机所分配到的**内存slot**，内存条模型. 注意最大`KVM_ADDRESS_SPACE_NUM`(这里是1).
 
-`kvm_memslots`结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slot`的数组，对应于**该虚拟机**使用的**所有内存区域(slot**)。
-
-`kvm_memslots`以**数组形式**存储这些**slot的地址信息**。用于**GPA转成HVA**, 内存虚拟化.
+`kvm_memslots`结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slot`的数组，对应于**该虚拟机**使用的**所有内存区域(slot**)。以**数组形式**存储这些**slot的地址信息**。
 
 `kvm_mem_slot`是kvm内存管理相关主要数据结构，用来表示**虚拟机GPA**和**主机HVA**之间的**映射关系**，一个`kvm_mem_slot`表示一段**内存区域(slot)的映射关系**.
 
