--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -6,8 +6,8 @@
 - [基本原理](#基本原理)
 - [基本流程](#基本流程)
 - [代码分析](#代码分析)
-  - [](#)
-  - [kvm_mem_slot 结构体: 一段空间虚拟机GPA到主机HVA的映射关系](#kvm_mem_slot-结构体-一段空间虚拟机gpa到主机hva的映射关系)
+  - [kvm_memslots: 虚拟机所有slot信息](#kvm_memslots-虚拟机所有slot信息)
+  - [kvm_mem_slot 结构体: 一个代表一段空间虚拟机GPA到主机HVA的映射关系](#kvm_mem_slot-结构体-一个代表一段空间虚拟机gpa到主机hva的映射关系)
   - [kvm_vm_ioctl(): vm指令入口](#kvm_vm_ioctl-vm指令入口)
 - [参考](#参考)
 
@@ -41,7 +41,7 @@ kvm_vm_ioctl()
 
 # 代码分析
 
-## 
+## kvm_memslots: 虚拟机所有slot信息
 
 ```cpp
 // include/linux/kvm_host.h
@@ -67,11 +67,13 @@ struct kvm_memslots {
 };
 ```
 
-kvm_memslots
+kvm_memslots结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slot`的数组，对应于**该虚拟机**使用的**所有内存区域(slot**)。以**数组形式**存储这些**slot的地址信息**。
 
-获取某一个`kvm_memory_slot`, 通过`id_to_memslot(struct kvm_memslots *slots, int id)`实现.
+`kvm_mem_slot`是kvm内存管理相关主要数据结构，用来表示**虚拟机GPA**和**主机HVA**之间的**映射关系**，一个`kvm_mem_slot`表示一段**内存区域(slot)的映射关系**.
 
-## kvm_mem_slot 结构体: 一段空间虚拟机GPA到主机HVA的映射关系
+获取某一个`kvm_memory_slot`, 通过`id_to_memslot(struct kvm_memslots *slots, int id)`实现, 下面有具体代码.
+
+## kvm_mem_slot 结构体: 一个代表一段空间虚拟机GPA到主机HVA的映射关系
 
 由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
@@ -278,7 +280,7 @@ int __kvm_set_memory_region(struct kvm *kvm,
                                 return -EEXIST;
                 }
         }
-
+        // 
         /* Allocate/free page dirty bitmap as needed */
         if (!(new.flags & KVM_MEM_LOG_DIRTY_PAGES))
                 new.dirty_bitmap = NULL;
@@ -479,34 +481,6 @@ static void update_memslots(struct kvm_memslots *slots,
 
 
 
-
-```cpp
-……
-case KVM_SET_USER_MEMORY_REGION: {
-        struct kvm_userspace_memory_region kvm_userspace_mem;
-    
-        r = -EFAULT;
-        if (copy_from_user(&kvm_userspace_mem, argp,
-                        sizeof (kvm_userspace_mem)))
-            goto out;
-        kvm_userspace_mem->flags |= 0x1;
-        r = kvm_vm_ioctl_set_memory_region(kvm, &kvm_userspace_mem);
-        break;
-    }
-……
-```
-
-可以看到首要任务就是把参数复制到内核，然后调用了kvm_vm_ioctl_set_memory_region()函数。
-
-```cpp
-int kvm_vm_ioctl_set_memory_region(struct kvm *kvm,
-                   struct kvm_userspace_memory_region *mem)
-{
-    if (mem->slot >= KVM_USER_MEM_SLOTS)
-        return -EINVAL;
-    return kvm_set_memory_region(kvm, mem);
-}
-```
 
 函数检查下slot编号如果超额，那没办法，无法添加，否则调用kvm_set_memory_region()函数。而该函数没做别的，直接调用了__kvm_set_memory_region。该函数比较长，咱们还是分段介绍。开始就是一些常规检查。
 
