--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -280,7 +280,7 @@ int __kvm_set_memory_region(struct kvm *kvm,
                                 return -EEXIST;
                 }
         }
-        // 
+        // 如果新slot要求KVM_MEM_LOG_DIRTY_PAGES, 分配一个dirty_bitmap
         /* Allocate/free page dirty bitmap as needed */
         if (!(new.flags & KVM_MEM_LOG_DIRTY_PAGES))
                 new.dirty_bitmap = NULL;
@@ -436,6 +436,10 @@ out_slots:
 }
 ```
 
+如果change为`KVM_MR_DELETE`或者`KVM_MR_MOVE`，这里主要有**两个操作**，一是设置对应slot标识为`KVM_MEMSLOT_INVALID`，**更新页表**。二是增加slots->generation，**撤销iommu mapping**。
+
+接下来对于**私有映射**的话`(memslot->id >= KVM_USER_MEM_SLOTS)`，如果是要创建，则需要**手动建立映射**。
+
 ```cpp
 int kvm_arch_prepare_memory_region(struct kvm *kvm,
                                 struct kvm_memory_slot *memslot,
@@ -478,6 +482,20 @@ static void update_memslots(struct kvm_memslots *slots,
         }
 }
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
