--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -210,19 +210,19 @@ int __kvm_set_memory_region(struct kvm *kvm,
                 memset(&old, 0, sizeof(old));
                 old.id = id;
         }
-        // 新设置区域大小为 0, 意味着删除原有区域, 然后直接返回
+        // 新设置区域大小为 0, 意味着删除原有区域, 调用删除然后直接返回
         if (!mem->memory_size)
                 // 最终还是会调用 kvm_set_memslot
                 return kvm_delete_memslot(kvm, mem, &old, as_id);
         
-        // 新的 kvm_memory_slot
+        // 设置新的 kvm_memory_slot
         new.id = id;
         // 内存区域起始位置在Guest物理地址空间中的页框号
         new.base_gfn = mem->guest_phys_addr >> PAGE_SHIFT;
         // 内存区域大小转换为page单位
         new.npages = mem->memory_size >> PAGE_SHIFT;
         new.flags = mem->flags;
-        // HVA
+        // 主机虚拟地址
         new.userspace_addr = mem->userspace_addr;
 
         if (new.npages > KVM_MEM_MAX_NR_PAGES)
@@ -234,6 +234,7 @@ int __kvm_set_memory_region(struct kvm *kvm,
                  */
                 change = KVM_MR_CREATE;
                 new.dirty_bitmap = NULL;
+                // 重置新slot的arch信息
                 memset(&new.arch, 0, sizeof(new.arch));
         // 修改一个存在的slot
         } else { /* Modify an existing slot. */
@@ -414,7 +415,7 @@ static int kvm_set_memslot(struct kvm *kvm,
                 // flush影子页表中的条目
                 kvm_arch_flush_shadow_memslot(kvm, slot);
         }
-        // 
+        // 对于新建/move, 初始化kvm_memory_slot的arch部分
         r = kvm_arch_prepare_memory_region(kvm, new, mem, change);
         if (r)
                 goto out_slots;
