--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -422,11 +422,11 @@ static int kvm_set_memslot(struct kvm *kvm,
         r = kvm_arch_prepare_memory_region(kvm, new, mem, change);
         if (r)
                 goto out_slots;
-        // 更新
+        // 更新, 核心函数
         update_memslots(slots, new, change);
         // 安装新memslots, 将其写入kvm->memslots[]数组, 返回旧的memslots
         slots = install_new_memslots(kvm, as_id, slots);
-
+        // 刷新MMIO页表项
         kvm_arch_commit_memory_region(kvm, mem, old, new, change);
         // 释放旧内存区域相应的物理内存, HPA
         kvfree(slots);
@@ -454,7 +454,7 @@ static struct kvm_memslots *install_new_memslots(struct kvm *kvm,
 
         WARN_ON(gen & KVM_MEMSLOT_GEN_UPDATE_IN_PROGRESS);
         slots->generation = gen | KVM_MEMSLOT_GEN_UPDATE_IN_PROGRESS;
-
+        // 更新kvm->memslots, 该指针受rcu机制保护
         rcu_assign_pointer(kvm->memslots[as_id], slots);
         synchronize_srcu_expedited(&kvm->srcu);
 
@@ -474,12 +474,30 @@ static struct kvm_memslots *install_new_memslots(struct kvm *kvm,
          * use generations 1, 3, 5, ...
          */
         gen += KVM_ADDRESS_SPACE_NUM;
-
+        // 
         kvm_arch_memslots_updated(kvm, gen);
 
         slots->generation = gen;
 
         return old_memslots;
+}
+```
+
+```cpp
+void kvm_arch_memslots_updated(struct kvm *kvm, u64 gen)
+{
+        struct kvm_vcpu *vcpu;
+        int i;
+
+        /*
+         * memslots->generation has been incremented.
+         * mmio generation may have reached its maximum value.
+         */
+        kvm_mmu_invalidate_mmio_sptes(kvm, gen);
+
+        /* Force re-initialization of steal_time cache */
+        kvm_for_each_vcpu(i, vcpu, kvm)
+                kvm_vcpu_kick(vcpu);
 }
 ```
 
@@ -525,6 +543,8 @@ static void update_memslots(struct kvm_memslots *slots,
         }
 }
 ```
+
+
 
 
 
