--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -34,9 +34,17 @@ kvm_vm_ioctl()
     kvm_vm_ioctl_set_memory_region()
         kvm_set_memory_region()
             __kvm_set_memory_region()
-                kvm_iommu_unmap_pages() // 原来的slot需要删除，所以需要unmap掉相应的内存区域
-                install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
-                kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
+                kvm_set_memslot()
+                    kvm_arch_prepare_memory_region() // 对于新建/移动, 初始化kvm_memory_slot中arch部分; 对于删除, 什么不做
+                    update_memslots()
+                      kvm_memslot_delete() // 对于删除, 调用删除, 然后返回
+                      kvm_memslot_insert_back() // 对于新建,  slots->used_slots++
+                      kvm_memslot_move_backward() // 
+                    install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
+                    kvm_arch_commit_memory_region()
+                    kvm_iommu_unmap_pages() // 原来的slot需要删除，所以需要unmap掉相应的内存区域
+                    install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
+                    kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
 ```
 
 # 代码分析
