--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -35,12 +35,11 @@ kvm_vm_ioctl()
         kvm_set_memory_region()
             __kvm_set_memory_region()
                 kvm_set_memslot()
-                    kvm_arch_prepare_memory_region() // 对于新建/移动, 初始化kvm_memory_slot中arch部分; 对于删除, 什么不做
-                    update_memslots()
-                      kvm_memslot_delete() // 对于删除, 调用删除, 然后返回
-                      kvm_memslot_insert_back() // 对于新建,  slots->used_slots++
-                      kvm_memslot_move_backward() // 
-                    install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
+                    struct kvm_memory_slot new; // 生成新slot, 对于删除的情况, new所有置为0, 
+                    slots = kvm_dup_memslots(__kvm_memslots(kvm, as_id), change); // 得到原有kvm_memslots的一个副本
+                    kvm_arch_prepare_memory_region(kvm, new, mem, change) // 对于新建/移动, 初始化这个新kvm_memory_slot中arch部分; 对于删除, 什么不做
+                    update_memslots(slots, new, change); // 更新memslots数组(即slots), 没有具体动作
+                    slots = install_new_memslots(kvm, as_id, slots); //将新的slots
                     kvm_arch_commit_memory_region()
                     kvm_iommu_unmap_pages() // 原来的slot需要删除，所以需要unmap掉相应的内存区域
                     install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
@@ -430,7 +429,7 @@ static int kvm_set_memslot(struct kvm *kvm,
         r = kvm_arch_prepare_memory_region(kvm, new, mem, change);
         if (r)
                 goto out_slots;
-        // 更新, 核心函数
+        // 更新memslots数组
         update_memslots(slots, new, change);
         // 安装新memslots, 将其写入kvm->memslots[]数组, 返回旧的memslots
         slots = install_new_memslots(kvm, as_id, slots);
