--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -34,14 +34,18 @@ kvm_vm_ioctl()
     kvm_vm_ioctl_set_memory_region()
         kvm_set_memory_region()
             __kvm_set_memory_region()
+                struct kvm_memory_slot new; // 生成新slot, 对于删除的情况, new除了id其他所有置为0
                 kvm_set_memslot()
-                    struct kvm_memory_slot new; // 生成新slot, 对于删除的情况, new所有置为0, 
                     slots = kvm_dup_memslots(__kvm_memslots(kvm, as_id), change); // 得到原有kvm_memslots的一个副本
                     kvm_arch_prepare_memory_region(kvm, new, mem, change) // 对于新建/移动, 初始化这个新kvm_memory_slot中arch部分; 对于删除, 什么不做
-                    update_memslots(slots, new, change); // 更新memslots数组(即slots), 没有具体动作
-                    slots = install_new_memslots(kvm, as_id, slots); //将新的slots
+                    update_memslots(slots, new, change); // 更新memslots数组(即slots副本), 没有具体动作
+                    slots = install_new_memslots(kvm, as_id, slots); //安装新的slots, 并返回旧的
+                        rcu_assign_pointer(kvm->memslots[as_id], slots); // 将新slots赋值给kvm->memslots
+                        kvm_arch_memslots_updated(); //
                     kvm_arch_commit_memory_region()
-                    kvm_iommu_unmap_pages() // 原来的slot需要删除，所以需要unmap掉相应的内存区域
+                    kvfree(slots); // 释放旧slots
+                    
+                    kvm_iommu_unmap_pages(); // 原来的slot需要删除，所以需要unmap掉相应的内存区域
                     install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
                     kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
 ```
