--- a/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 内存注册.md
@@ -4,11 +4,14 @@
 <!-- code_chunk_output -->
 
 - [基本原理](#基本原理)
-- [基本流程](#基本流程)
-- [代码分析](#代码分析)
+- [相关数据结构](#相关数据结构)
   - [kvm_memslots: 虚拟机所有slot信息](#kvm_memslots-虚拟机所有slot信息)
   - [kvm_mem_slot 结构体: 一个代表一段空间虚拟机GPA到主机HVA的映射关系](#kvm_mem_slot-结构体-一个代表一段空间虚拟机gpa到主机hva的映射关系)
+- [流程概述](#流程概述)
+- [流程分析](#流程分析)
   - [kvm_vm_ioctl(): vm指令入口](#kvm_vm_ioctl-vm指令入口)
+  - [__kvm_set_memory_region()](#__kvm_set_memory_region)
+    - [kvm_set_memslot(): 最终调用函数](#kvm_set_memslot-最终调用函数)
 - [参考](#参考)
 
 <!-- /code_chunk_output -->
@@ -25,32 +28,7 @@ qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设
 
 本质是创建并填充了一个临时`kvm_memslots`结构，并把其赋值给`kvm->memslots`（虚拟机全局的）。
 
-# 基本流程
-
-ioctl vm指令`KVM_SET_USER_MEMORY_REGION`在内核主要执行流程如下：
-
-```cpp
-kvm_vm_ioctl()
-    kvm_vm_ioctl_set_memory_region()
-        kvm_set_memory_region()
-            __kvm_set_memory_region()
-                struct kvm_memory_slot new; // 生成新slot, 对于删除的情况, new除了id其他所有置为0
-                kvm_set_memslot()
-                    slots = kvm_dup_memslots(__kvm_memslots(kvm, as_id), change); // 得到原有kvm_memslots的一个副本
-                    kvm_arch_prepare_memory_region(kvm, new, mem, change) // 对于新建/移动, 初始化这个新kvm_memory_slot中arch部分; 对于删除, 什么不做
-                    update_memslots(slots, new, change); // 更新memslots数组(即slots副本), 没有具体动作
-                    slots = install_new_memslots(kvm, as_id, slots); //安装新的slots, 并返回旧的
-                        rcu_assign_pointer(kvm->memslots[as_id], slots); // 将新slots赋值给kvm->memslots
-                        kvm_arch_memslots_updated(); //
-                    kvm_arch_commit_memory_region()
-                    kvfree(slots); // 释放旧slots
-                    
-                    kvm_iommu_unmap_pages(); // 原来的slot需要删除，所以需要unmap掉相应的内存区域
-                    install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
-                    kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
-```
-
-# 代码分析
+# 相关数据结构
 
 ## kvm_memslots: 虚拟机所有slot信息
 
@@ -122,6 +100,35 @@ struct kvm_memory_slot {
 };
 ```
 
+至于`kvm_userspace_memory_region`可以看qemu部分
+
+# 流程概述
+
+ioctl vm指令`KVM_SET_USER_MEMORY_REGION`在内核主要执行流程如下：
+
+```cpp
+kvm_vm_ioctl()
+    kvm_vm_ioctl_set_memory_region()
+        kvm_set_memory_region()
+            __kvm_set_memory_region()
+                struct kvm_memory_slot new; // 生成新slot, 对于删除的情况, new除了id其他所有置为0
+                kvm_set_memslot()
+                    slots = kvm_dup_memslots(__kvm_memslots(kvm, as_id), change); // 得到原有kvm_memslots的一个副本
+                    kvm_arch_prepare_memory_region(kvm, new, mem, change) // 对于新建/移动, 初始化这个新kvm_memory_slot中arch部分; 对于删除, 什么不做
+                    update_memslots(slots, new, change); // 更新memslots数组(即slots副本), 没有具体动作
+                    slots = install_new_memslots(kvm, as_id, slots); //安装新的slots, 并返回旧的
+                        rcu_assign_pointer(kvm->memslots[as_id], slots); // 将新slots赋值给kvm->memslots
+                        kvm_arch_memslots_updated(); //
+                    kvm_arch_commit_memory_region()
+                    kvfree(slots); // 释放旧slots
+
+                    kvm_iommu_unmap_pages(); // 原来的slot需要删除，所以需要unmap掉相应的内存区域
+                    install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
+                    kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
+```
+
+# 流程分析
+
 ## kvm_vm_ioctl(): vm指令入口
 
 **kvm ioctl vm指令的入口**，传入的fd为`KVM_CREATE_VM`中返回的fd。主要用于针对VM虚拟机进行控制，如：内存设置、创建VCPU等。
@@ -160,6 +167,8 @@ int kvm_vm_ioctl_set_memory_region(struct kvm *kvm,
 ```
 
 函数检查下slot编号如果超额，那没办法，无法添加，否则调用`kvm_set_memory_region()`函数。而该函数没做别的，最终调用 `__kvm_set_memory_region()`
+
+## __kvm_set_memory_region()
 
 ```cpp
 /*
@@ -309,7 +318,7 @@ int __kvm_set_memory_region(struct kvm *kvm,
         r = kvm_set_memslot(kvm, mem, &old, &new, as_id, change);
         if (r)
                 goto out_bitmap;
-
+        // 如果旧slot有新的没有, 释放dirty_bitmap
         if (old.dirty_bitmap && !new.dirty_bitmap)
                 kvm_destroy_dirty_bitmap(&old);
         return 0;
@@ -382,6 +391,8 @@ static int kvm_delete_memslot(struct kvm *kvm,
         return 0;
 }
 ```
+
+### kvm_set_memslot(): 最终调用函数
 
 最终调用`kvm_set_memslot()`
 
@@ -484,6 +495,7 @@ static struct kvm_memslots *install_new_memslots(struct kvm *kvm,
          * space 0 will use generations 0, 2, 4, ... while address space 1 will
          * use generations 1, 3, 5, ...
          */
+        // 增加
         gen += KVM_ADDRESS_SPACE_NUM;
         // 
         kvm_arch_memslots_updated(kvm, gen);
@@ -520,12 +532,99 @@ int kvm_arch_prepare_memory_region(struct kvm *kvm,
 {
         // 创建或move区域
         if (change == KVM_MR_CREATE || change == KVM_MR_MOVE)
-                // 初始化memslot中arch相关内容
+                // 初始化memslot中arch相关内容, 涉及页表
                 return kvm_alloc_memslot_metadata(memslot,
                                                   mem->memory_size >> PAGE_SHIFT);
         return 0;
 }
 ```
+
+```cpp
+/* KVM Hugepage definitions for x86 */
+enum {
+        PT_PAGE_TABLE_LEVEL   = 1,
+        PT_DIRECTORY_LEVEL    = 2,
+        PT_PDPE_LEVEL         = 3,
+        /* set max level to the biggest one */
+        PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
+};
+// 这里是3
+#define KVM_NR_PAGE_SIZES       (PT_MAX_HUGEPAGE_LEVEL - \
+                                 PT_PAGE_TABLE_LEVEL + 1)
+
+static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
+                                      unsigned long npages)
+{
+        int i;
+
+        /*
+         * Clear out the previous array pointers for the KVM_MR_MOVE case.  The
+         * old arrays will be freed by __kvm_set_memory_region() if installing
+         * the new memslot is successful.
+         */
+        // 重置这个kvm_memory_slot的arch
+        memset(&slot->arch, 0, sizeof(slot->arch));
+
+        for (i = 0; i < KVM_NR_PAGE_SIZES; ++i) {
+                struct kvm_lpage_info *linfo;
+                unsigned long ugfn;
+                int lpages;
+                int level = i + 1;
+
+                lpages = gfn_to_index(slot->base_gfn + npages - 1,
+                                      slot->base_gfn, level) + 1;
+
+                slot->arch.rmap[i] =
+                        kvcalloc(lpages, sizeof(*slot->arch.rmap[i]),
+                                 GFP_KERNEL_ACCOUNT);
+                if (!slot->arch.rmap[i])
+                        goto out_free;
+                if (i == 0)
+                        continue;
+
+                linfo = kvcalloc(lpages, sizeof(*linfo), GFP_KERNEL_ACCOUNT);
+                if (!linfo)
+                        goto out_free;
+
+                slot->arch.lpage_info[i - 1] = linfo;
+
+                if (slot->base_gfn & (KVM_PAGES_PER_HPAGE(level) - 1))
+                        linfo[0].disallow_lpage = 1;
+                if ((slot->base_gfn + npages) & (KVM_PAGES_PER_HPAGE(level) - 1))
+                        linfo[lpages - 1].disallow_lpage = 1;
+                ugfn = slot->userspace_addr >> PAGE_SHIFT;
+                /*
+                 * If the gfn and userspace address are not aligned wrt each
+                 * other, disable large page support for this slot.
+                 */
+                if ((slot->base_gfn ^ ugfn) & (KVM_PAGES_PER_HPAGE(level) - 1)) {
+                        unsigned long j;
+
+                        for (j = 0; j < lpages; ++j)
+                                linfo[j].disallow_lpage = 1;
+                }
+        }
+
+        if (kvm_page_track_create_memslot(slot, npages))
+                goto out_free;
+
+        return 0;
+
+out_free:
+        for (i = 0; i < KVM_NR_PAGE_SIZES; ++i) {
+                kvfree(slot->arch.rmap[i]);
+                slot->arch.rmap[i] = NULL;
+                if (i == 0)
+                        continue;
+
+                kvfree(slot->arch.lpage_info[i - 1]);
+                slot->arch.lpage_info[i - 1] = NULL;
+        }
+        return -ENOMEM;
+}
+```
+
+如果是新插入内存条或move，`kvm_alloc_memslot_metadata`函数，里面主要是一个循环，`KVM_NR_PAGE_SIZES`是**分页的级数**，此处是**3**，第一次循环，`lpages = gfn_to_index(slot->base_gfn + npages - 1,slot->base_gfn, level) + 1`，lpages就是**一级页表**所需要的**page数**，大致是`npages>>0*9`,然后为`slot->arch.rmap[i]`申请了内存空间，此处可以猜想，**rmap就是一级页表**了，继续看，lpages约为npages>>1*9,此处又多为lpage_info申请了同等空间，然后对lpage_info初始化赋值，现在看不到lpage_info的具体作用，看到后再补上。整体上看kvm_arch_create_memslot做了一个3级的软件页表。
 
 ```cpp
 static void update_memslots(struct kvm_memslots *slots,
@@ -555,244 +654,55 @@ static void update_memslots(struct kvm_memslots *slots,
 }
 ```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-函数检查下slot编号如果超额，那没办法，无法添加，否则调用kvm_set_memory_region()函数。而该函数没做别的，直接调用了__kvm_set_memory_region。该函数比较长，咱们还是分段介绍。开始就是一些常规检查。
-
 ```cpp
-if (mem->memory_size & (PAGE_SIZE - 1))
-        goto out;
-    if (mem->guest_phys_addr & (PAGE_SIZE - 1))
-        goto out;
-    /* We can read the guest memory with __xxx_user() later on. */
-    if ((mem->slot < KVM_USER_MEM_SLOTS) &&
-        ((mem->userspace_addr & (PAGE_SIZE - 1)) ||
-         !access_ok(VERIFY_WRITE,
-            (void   *)(unsigned long)mem->userspace_addr,
-            mem->memory_size)))
-        goto out;
-    if (mem->slot >= KVM_MEM_SLOTS_NUM)
-        goto out;
-    if (mem->guest_phys_addr + mem->memory_size < mem->guest_phys_addr)
-        goto out;
-```
+void kvm_arch_commit_memory_region(struct kvm *kvm,
+                                const struct kvm_userspace_memory_region *mem,
+                                struct kvm_memory_slot *old,
+                                const struct kvm_memory_slot *new,
+                                enum kvm_mr_change change)
+{
+        if (!kvm->arch.n_requested_mmu_pages)
+                kvm_mmu_change_mmu_pages(kvm,
+                                kvm_mmu_calculate_default_mmu_pages(kvm));
 
-如果memory_size 不是页对齐的，则失败；如果mem的客户机物理地址不是页对齐的，也失败；如果slot的id在合法范围内但是用户空间地址不是页对齐的或者地址范围内的不能正常访问，则失败；如果slot id大于等于KVM_MEM_SLOTS_NUM，则失败；最后if我是没看明白啊，怎么可能越加越小呢，size也不可能是负值，该问题再议吧。
-
-```cpp
-    /*定位到指定slot*/
-    slot = id_to_memslot(kvm->memslots, mem->slot);
-    base_gfn = mem->guest_phys_addr >> PAGE_SHIFT;
-    npages = mem->memory_size >> PAGE_SHIFT;
-
-    r = -EINVAL;
-    if (npages > KVM_MEM_MAX_NR_PAGES)
-        goto out;
-    /*如果npages为0，则设置*/
-    if (!npages)
-        mem->flags &= ~KVM_MEM_LOG_DIRTY_PAGES;
-    /*new  为用户空间传递过来的mem,old为和用户空间mem id一致的mem*/
-    new = old = *slot;
-
-    new.id = mem->slot;
-    new.base_gfn = base_gfn;
-    new.npages = npages;
-    new.flags = mem->flags;
-
-    r = -EINVAL;
-    /*如果new 的 npage不为0*/
-    if (npages) {
-        /*如果old 的npage为0，则创建新的mem*/
-        if (!old.npages)
-            change = KVM_MR_CREATE;
-        /*否则修改已有的mem*/
-        else { /* Modify an existing slot. */
-            if ((mem->userspace_addr != old.userspace_addr) ||
-                (npages != old.npages) ||
-                ((new.flags ^ old.flags) & KVM_MEM_READONLY))
-                goto out;
-            /*如果两个mem映射的基址不同*/
-            if (base_gfn != old.base_gfn)
-                change = KVM_MR_MOVE;
-            /*如果标志位不同则更新标志位*/
-            else if (new.flags != old.flags)
-                change = KVM_MR_FLAGS_ONLY;
-            else { /* Nothing to change. */
-                /*都一样的话就什么都不做*/
-                r = 0;
-                goto out;
-            }
-        }
-    }
-    /*如果new的npage为0而old的npage不为0，则需要delete已有的*/
-    else if (old.npages) {
-        change = KVM_MR_DELETE;
-    } else /* Modify a non-existent slot: disallowed. */
-        goto out;
-```
-
-这里如果检查都通过了，首先通过传递进来的slot的id在kvm维护的slot数组中找到对应的slot结构，此结构可能为空或者为旧的slot。然后获取物理页框号、页面数目。如果页面数目大于KVM_MEM_MAX_NR_PAGES，则失败；如果npages为0，则去除KVM_MEM_LOG_DIRTY_PAGES标志。使用旧的slot对新的slot内容做初始化，然后对new slot做设置，参数基本是从用户空间接收的kvm_userspace_memory_region的参数。然后进入下面的if判断
-
-1、如果npages不为0，表明本次要添加slot此时如果old slot的npages为0，表明之前没有对应的slot，需要添加新的,设置change为KVM_MR_CREATE；如果不为0，则需要先修改已有的slot，注意这里如果old slot和new slot的page数目和用户空间地址必须相等，还有就是两个slot的readonly属性必须一致。如果满足上述条件，进入下面的流程。如果映射的物理页框号不同，则设置change KVM_MR_MOVE，如果flags不同，设置KVM_MR_FLAGS_ONLY，否则，什么都不做。
-
-2、如果npages为0，而old.pages不为0，表明需要删除old slot,设置change为KVM_MR_DELETE。到这里基本是做一些准备工作，确定用户空间要进行的操作，接下来就执行具体的动作了
-
-
-```cpp
-if ((change == KVM_MR_CREATE) || (change == KVM_MR_MOVE)) {
-        /* Check for overlaps */
-        r = -EEXIST;
-        kvm_for_each_memslot(slot, kvm->memslots) {
-            if ((slot->id >= KVM_USER_MEM_SLOTS) ||
-                (slot->id == mem->slot))
-                continue;
-            if (!((base_gfn + npages <= slot->base_gfn) ||
-                  (base_gfn >= slot->base_gfn + slot->npages)))
-                goto out;
-        }
-    }
-
-    /* Free page dirty bitmap if unneeded */
-    if (!(new.flags & KVM_MEM_LOG_DIRTY_PAGES))
-        new.dirty_bitmap = NULL;
-
-    r = -ENOMEM;
-    if (change == KVM_MR_CREATE) {
-        new.userspace_addr = mem->userspace_addr;
-
-        if (kvm_arch_create_memslot(&new, npages))
-            goto out_free;
-    }
-
-    /* Allocate page dirty bitmap if needed */
-    if ((new.flags & KVM_MEM_LOG_DIRTY_PAGES) && !new.dirty_bitmap) {
-        if (kvm_create_dirty_bitmap(&new) < 0)
-            goto out_free;
-    }
-    /*如果用户层请求释放*/
-    if ((change == KVM_MR_DELETE) || (change == KVM_MR_MOVE)) {
-        r = -ENOMEM;
-        slots = kmemdup(kvm->memslots, sizeof(struct kvm_memslots),
-                GFP_KERNEL);
-        if (!slots)
-            goto out_free;
-        /*先根据id定位具体的slot*/
-        slot = id_to_memslot(slots, mem->slot);
-        /*首先设置非法*/
-        slot->flags |= KVM_MEMSLOT_INVALID;
-
-        old_memslots = install_new_memslots(kvm, slots, NULL);
-
-        /* slot was deleted or moved, clear iommu mapping */
-        kvm_iommu_unmap_pages(kvm, &old);
-        /* From this point no new shadow pages pointing to a deleted,
-         * or moved, memslot will be created.
+        /*
+         * Dirty logging tracks sptes in 4k granularity, meaning that large
+         * sptes have to be split.  If live migration is successful, the guest
+         * in the source machine will be destroyed and large sptes will be
+         * created in the destination. However, if the guest continues to run
+         * in the source machine (for example if live migration fails), small
+         * sptes will remain around and cause bad performance.
          *
-         * validation of sp->gfn happens in:
-         *     - gfn_to_hva (kvm_read_guest, gfn_to_pfn)
-         *     - kvm_is_visible_gfn (mmu_check_roots)
+         * Scan sptes if dirty logging has been stopped, dropping those
+         * which can be collapsed into a single large-page spte.  Later
+         * page faults will create the large-page sptes.
+         *
+         * There is no need to do this in any of the following cases:
+         * CREATE:      No dirty mappings will already exist.
+         * MOVE/DELETE: The old mappings will already have been cleaned up by
+         *              kvm_arch_flush_shadow_memslot()
          */
-        kvm_arch_flush_shadow_memslot(kvm, slot);
-        slots = old_memslots;
-    }
+        if (change == KVM_MR_FLAGS_ONLY &&
+                (old->flags & KVM_MEM_LOG_DIRTY_PAGES) &&
+                !(new->flags & KVM_MEM_LOG_DIRTY_PAGES))
+                kvm_mmu_zap_collapsible_sptes(kvm, new);
 
-    r = kvm_arch_prepare_memory_region(kvm, &new, mem, change);
-    if (r)
-        goto out_slots;
+        /*
+         * Set up write protection and/or dirty logging for the new slot.
+         *
+         * For KVM_MR_DELETE and KVM_MR_MOVE, the shadow pages of old slot have
+         * been zapped so no dirty logging staff is needed for old slot. For
+         * KVM_MR_FLAGS_ONLY, the old slot is essentially the same one as the
+         * new and it's also covered when dealing with the new slot.
+         *
+         * FIXME: const-ify all uses of struct kvm_memory_slot.
+         */
+        if (change != KVM_MR_DELETE)
+                kvm_mmu_slot_apply_flags(kvm, (struct kvm_memory_slot *) new);
 
-    r = -ENOMEM;
-    /*
-     * We can re-use the old_memslots from above, the only difference
-     * from the currently installed memslots is the invalid flag.  This
-     * will get overwritten by update_memslots anyway.
-     */
-    if (!slots) {
-        slots = kmemdup(kvm->memslots, sizeof(struct kvm_memslots),
-                GFP_KERNEL);
-        if (!slots)
-            goto out_free;
-    }
-
-    /*
-     * IOMMU mapping:  New slots need to be mapped.  Old slots need to be
-     * un-mapped and re-mapped if their base changes.  Since base change
-     * unmapping is handled above with slot deletion, mapping alone is
-     * needed here.  Anything else the iommu might care about for existing
-     * slots (size changes, userspace addr changes and read-only flag
-     * changes) is disallowed above, so any other attribute changes getting
-     * here can be skipped.
-     */
-    if ((change == KVM_MR_CREATE) || (change == KVM_MR_MOVE)) {
-        r = kvm_iommu_map_pages(kvm, &new);
-        if (r)
-            goto out_slots;
-    }
-
-    /* actual memory is freed via old in kvm_free_physmem_slot below */
-    if (change == KVM_MR_DELETE) {
-        new.dirty_bitmap = NULL;
-        memset(&new.arch, 0, sizeof(new.arch));
-    }
-    old_memslots = install_new_memslots(kvm, slots, &new);
-    kvm_arch_commit_memory_region(kvm, mem, &old, change);
-    kvm_free_physmem_slot(&old, &new);
-    kfree(old_memslots);
-    return 0;
-```
-
-这里就根据change来做具体的设置了，如果 KVM_MR_CREATE，则设置new.用户空间地址为新的地址。如果new slot要求KVM_MEM_LOG_DIRTY_PAGES，但是new并没有分配dirty_bitmap，则为其分配。如果change为KVM_MR_DELETE或者KVM_MR_MOVE，这里主要由两个操作，一是设置对应slot标识为KVM_MEMSLOT_INVALID，更新页表。二是增加slots->generation，撤销iommu mapping。接下来对于私有映射的话(memslot->id >= KVM_USER_MEM_SLOTS)，如果是要创建，则需要手动建立映射。
-
-接下来确保slots不为空，如果是KVM_MR_CREATE或者KVM_MR_MOVE，就需要重新建立映射，使用kvm_iommu_map_pages函数 ，而如果是KVM_MR_DELETE，就没必要为new设置dirty_bitmap，并对其arch字段的结构清零。最终都要执行操作install_new_memslots，不过当为delete操作时，new的memory size为0，那么看下该函数做了什么。
-
-```cpp
-static struct kvm_memslots *install_new_memslots(struct kvm *kvm,
-        struct kvm_memslots *slots, struct kvm_memory_slot *new)
-{
-    struct kvm_memslots *old_memslots = kvm->memslots;
-
-    update_memslots(slots, new, kvm->memslots->generation);
-    rcu_assign_pointer(kvm->memslots, slots);
-    kvm_synchronize_srcu_expedited(&kvm->srcu);
-    kvm_arch_memslots_updated(kvm);
-    return old_memslots;
-}
-```
-
-这里核心操作在update_memslots里，如果是添加新的（create or move），那么new 的memory size肯定不为0，则根据new的id，在kvm维护的slot 数组中找到对应的slot，然后一次性吧new的内容赋值给old slot.如果页面数目不一样，则需要进行排序。如果是删除操作，new的memorysize 为0，这里就相当于把清空了一个slot。update之后就更改kvm->memslots，该指针是受RCU机制保护的，所以不能直接修改，需要先分配好，调用API修改。最后再刷新MMIO页表项。
-
-```cpp
-void update_memslots(struct kvm_memslots *slots, struct kvm_memory_slot *new,
-             u64 last_generation)
-{
-    if (new) {
-        int id = new->id;
-        struct kvm_memory_slot *old = id_to_memslot(slots, id);
-        unsigned long npages = old->npages;
-
-        *old = *new;
-            /*如果是删除操作，那么new.npages就是0*/
-        if (new->npages != npages)
-            sort_memslots(slots);
-    }
-
-    slots->generation = last_generation + 1;
+        /* Free the arrays associated with the old memslot. */
+        if (change == KVM_MR_MOVE)
+                kvm_arch_free_memslot(kvm, old);
 }
 ```
 
