--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -14,93 +14,11 @@ https://blog.csdn.net/jinzhuojun/article/details/8147463
 
 https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F%E9%A1%B5%E4%BD%8D%E5%9B%BE/
 
+脏页位图: http://www.oenhan.com/linux-cache-writeback
 
 插播qemu对内存条的模拟管理，是通过`RAMBlock`和`ram_list`管理的，**RAMBlock**就是**每次申请的内存池**，`ram_list`则是RAMBlock的**链表**，他们结构如下：
 
-```cpp
-typedef struct RAMBlock {
-//对应宿主的内存地址
-    uint8_t *host;
-//block在ramlist中的偏移
-    ram_addr_t offset;
-//block长度
-    ram_addr_t length;
-    uint32_t flags;
-//block名字
-    char idstr[256];
-    QLIST_ENTRY(RAMBlock) next;
-#if defined(__linux__) && !defined(TARGET_S390X)
-    int fd;
-#endif
-} RAMBlock;
- 
-typedef struct RAMList {
-//看代码理解就是list的head，但是不知道为啥叫dirty...
-    uint8_t *phys_dirty;
-    QLIST_HEAD(ram, RAMBlock) blocks;
-} RAMList;
-```
-
-然后是一串判断，在`kvm_enabled`的情况下使用`new_block->host = kvm_vmalloc(size)`，最终内存是`qemu_vmalloc`分配的，使用`qemu_memalign`干活。
-
-```cpp
-void *qemu_memalign(size_t alignment, size_t size)
-{
-    void *ptr;
-//使用posix进行内存针对页大小对齐
-#if defined(_POSIX_C_SOURCE) && !defined(__sun__)
-    int ret;
-    ret = posix_memalign(&ptr, alignment, size);
-    if (ret != 0) {
-        fprintf(stderr, "Failed to allocate %zu B: %sn",
-                size, strerror(ret));
-        abort();
-    }
-#elif defined(CONFIG_BSD)
-    ptr = qemu_oom_check(valloc(size));
-#else
-//所谓检查oom就是看memalign对应malloc申请内存是否成功
-    ptr = qemu_oom_check(memalign(alignment, size));
-#endif
-    trace_qemu_memalign(alignment, size, ptr);
-    return ptr;
-}
-```
-
-`memory_region_add_subregion`具体细节“KVM源码分析2”中已经说了，参考对照着看吧，中间很多**映射代码过程**也只是qemu遗留的软件实现，没看到具体存在的意义，直接看到`kvm_set_user_memory_region`函数，内核真正需要`kvm_vm_ioctl`传递过去的参数是什么， `struct kvm_userspace_memory_region mem`而已，也就是
-
-```cpp
-struct kvm_userspace_memory_region {
-__u32 slot;
-__u32 flags;
-__u64 guest_phys_addr;
-__u64 memory_size; /* bytes */
-__u64 userspace_addr; /* start of the userspace allocated memory */
-};
-```
-
-kvm_vm_ioctl进入到内核是在KVM_SET_USER_MEMORY_REGION参数中，即执行
-
-
-
-
-
-
-
-
-
-如果是新插入内存条，代码则走入kvm_arch_create_memslot函数，里面主要是一个循环，KVM_NR_PAGE_SIZES是分页的级数，此处是3，第一次循环，`lpages = gfn_to_index(slot->base_gfn + npages - 1,slot->base_gfn, level) + 1`，lpages就是一级页表所需要的page数，大致是`npages>>0*9`,然后为`slot->arch.rmap[i]`申请了内存空间，此处可以猜想，rmap就是一级页表了，继续看，lpages约为npages>>1*9,此处又多为lpage_info申请了同等空间，然后对lpage_info初始化赋值，现在看不到lpage_info的具体作用，看到后再补上。整体上看kvm_arch_create_memslot做了一个3级的软件页表。
-
-如果有脏页,并且脏页位图为空,则分配[脏页位图](http://www.oenhan.com/linux-cache-writeback), `kvm_create_dirty_bitmap`实际就是"`页数/8`".
-
-```cpp
-if ((new.flags & KVM_MEM_LOG_DIRTY_PAGES) && !new.dirty_bitmap) {
-        if (kvm_create_dirty_bitmap(&new) < 0)
-            goto out_free;
-    }
-```
-
-当内存条的改变是KVM_MR_DELETE或者KVM_MR_MOVE,先申请一个slots,把kvm->memslots暂存到这里,首先通过id_to_memslot获取准备插入的内存条对应到kvm的插槽是slot,无论删除还是移动,将其先标记为KVM_MEMSLOT_INVALID,然后是install_new_memslots,其实就是更新了一下slots->generation的值。
+# EPT页表映射
 
 内存的添加说完了，看一下[EPT页表](http://www.oenhan.com/kernel-program-exec)的映射，在`kvm_arch_vcpu_setup`中有`kvm_mmu_setup`，是mmu的初始化，EPT的初始化是`init_kvm_tdp_mmu`，所谓的初始化就是填充了`vcpu->arch.mmu`结构体，里面有很多回调函数都会用到，最终的是`tdp_page_fault`。
 
