--- a/Virtualization/KVM/4. 内存虚拟化/4. QEMU内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. QEMU内存注册.md
@@ -3,20 +3,16 @@
 
 <!-- code_chunk_output -->
 
-- [基本原理](#基本原理)
-- [相关数据结构](#相关数据结构)
-  - [kvm_memslots: 虚拟机所有slot信息](#kvm_memslots-虚拟机所有slot信息)
-  - [kvm_mem_slot 结构体: 一个代表一段空间虚拟机GPA到主机HVA的映射关系](#kvm_mem_slot-结构体-一个代表一段空间虚拟机gpa到主机hva的映射关系)
-- [流程概述](#流程概述)
-- [流程分析](#流程分析)
-  - [kvm_vm_ioctl(): vm指令入口](#kvm_vm_ioctl-vm指令入口)
-  - [__kvm_set_memory_region()](#__kvm_set_memory_region)
-    - [kvm_set_memslot(): 最终调用函数](#kvm_set_memslot-最终调用函数)
-- [参考](#参考)
+- [1. 基本原理](#1-基本原理)
+- [2. 流程概述](#2-流程概述)
+- [3. 流程分析](#3-流程分析)
+  - [3.1. kvm_vm_ioctl(): vm指令入口](#31-kvm_vm_ioctl-vm指令入口)
+  - [3.2. __kvm_set_memory_region()](#32-__kvm_set_memory_region)
+    - [3.2.1. kvm_set_memslot(): 最终调用函数](#321-kvm_set_memslot-最终调用函数)
 
 <!-- /code_chunk_output -->
 
-# 基本原理
+# 1. 基本原理
 
 kvm虚拟机实际运行于`qemu-kvm`的**进程上下文**中，因此，需要建立**虚拟机的物理内存空间**(GPA)与`qemu-kvm`**进程的虚拟地址空间**(HVA)的映射关系。
 
@@ -28,81 +24,7 @@ qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设
 
 本质是创建并填充了一个临时`kvm_memslots`结构，并把其赋值给`kvm->memslots`（虚拟机全局的）。
 
-# 相关数据结构
-
-## kvm_memslots: 虚拟机所有slot信息
-
-```cpp
-// include/linux/kvm_host.h
-struct kvm {
-        struct kvm_memslots __rcu *memslots[KVM_ADDRESS_SPACE_NUM];
-```
-
-一个`struct kvm`代表一个虚拟机, memslots是该虚拟机所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`(这里是1), 用于将**GPA转换为HVA**. 
-
-```cpp
-/*
- * Note:
- * memslots are not sorted by id anymore, please use id_to_memslot()
- * to get the memslot by its id.
- */
-struct kvm_memslots {
-        u64 generation;
-        /* The mapping table from slot id to the index in memslots[]. */
-        short id_to_index[KVM_MEM_SLOTS_NUM];
-        atomic_t lru_slot;
-        int used_slots;
-        struct kvm_memory_slot memslots[];
-};
-```
-
-kvm_memslots结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slot`的数组，对应于**该虚拟机**使用的**所有内存区域(slot**)。以**数组形式**存储这些**slot的地址信息**。
-
-`kvm_mem_slot`是kvm内存管理相关主要数据结构，用来表示**虚拟机GPA**和**主机HVA**之间的**映射关系**，一个`kvm_mem_slot`表示一段**内存区域(slot)的映射关系**.
-
-获取某一个`kvm_memory_slot`, 通过`id_to_memslot(struct kvm_memslots *slots, int id)`实现, 下面有具体代码.
-
-## kvm_mem_slot 结构体: 一个代表一段空间虚拟机GPA到主机HVA的映射关系
-
-由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
-
-```cpp
-struct kvm_rmap_head {
-        unsigned long val;
-};
-
-struct kvm_lpage_info {
-        int disallow_lpage;
-};
-
-struct kvm_arch_memory_slot {
-        struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
-        struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
-        unsigned short *gfn_track[KVM_PAGE_TRACK_MAX];
-};
-
-struct kvm_memory_slot {
-        // 虚拟机物理地址(即GPA)对应的页框号
-        gfn_t base_gfn;
-        // 当前slot中包含的page数目
-        unsigned long npages;
-        // 脏页位图
-        unsigned long *dirty_bitmap;
-        // 架构相关部分
-        struct kvm_arch_memory_slot arch;
-        /*
-         * GPA对应的host虚拟地址(HVA), 由于虚拟机都运行在qemu的地址空间中
-         * 而qemu是用户态程序, 所以通常使用root-module下的用户地址空间.
-         */
-        unsigned long userspace_addr;
-        u32 flags;
-        short id;
-};
-```
-
-至于`kvm_userspace_memory_region`可以看qemu部分
-
-# 流程概述
+# 2. 流程概述
 
 ioctl vm指令`KVM_SET_USER_MEMORY_REGION`在内核主要执行流程如下：
 
@@ -127,9 +49,9 @@ kvm_vm_ioctl()
                     kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
 ```
 
-# 流程分析
+# 3. 流程分析
 
-## kvm_vm_ioctl(): vm指令入口
+## 3.1. kvm_vm_ioctl(): vm指令入口
 
 **kvm ioctl vm指令的入口**，传入的fd为`KVM_CREATE_VM`中返回的fd。主要用于针对VM虚拟机进行控制，如：内存设置、创建VCPU等。
 
@@ -168,7 +90,7 @@ int kvm_vm_ioctl_set_memory_region(struct kvm *kvm,
 
 函数检查下slot编号如果超额，那没办法，无法添加，否则调用`kvm_set_memory_region()`函数。而该函数没做别的，最终调用 `__kvm_set_memory_region()`
 
-## __kvm_set_memory_region()
+## 3.2. __kvm_set_memory_region()
 
 ```cpp
 /*
@@ -392,7 +314,7 @@ static int kvm_delete_memslot(struct kvm *kvm,
 }
 ```
 
-### kvm_set_memslot(): 最终调用函数
+### 3.2.1. kvm_set_memslot(): 最终调用函数
 
 最终调用`kvm_set_memslot()`
 
@@ -705,6 +627,3 @@ void kvm_arch_commit_memory_region(struct kvm *kvm,
                 kvm_arch_free_memslot(kvm, old);
 }
 ```
-
-# 参考
-
