--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段.md
@@ -39,6 +39,12 @@ primary processor-based VM-execution control字段与一个TRUE寄存器对应, 
 
 ## 2.2. secondary processor-based VM-execution control字段
 
+处理器架构的不断发展, 一些新的功能可能被不断加入.
+
+该字段用于提供这些扩展的控制功能, 如表3-7所示. 只有在primary processor-based VM-execution control字段的"activate secondary controls"位为1时才有效. 否则, 全部控制位关闭.
+
+![2020-03-17-14-45-35.png](./images/2020-03-17-14-45-35.png)
+
 # 3. posted-interrupt notification vector字段
 
 但是posted-interrupt processing机制允许处理器接受一个"通知性质"的外部中断但不会产生VM-exit, 其他的外部中断仍然会产生VM-exit. 
