--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
@@ -95,17 +95,15 @@ CPU首先查找**Guest CR3**指向的**L4页表**. 由于**Guest CR3**给的是*
 
 上图可以看出, CPU需要**5次！！！查询EPT页表(CR3\<L4页表地址GPA>、L3页表地址、L2页表地址、L1页表地址和最终GPA查询EPT页表！！！**), **每次查询！！！**都需要**4次内存访问(！！！每级页表都是一次内存访问！！！**), 最坏共**20次内存访问**. EPT硬件通过增大EPT TLB来尽量减少内存访问.
 
-客户机的GVA
-
 一个**GPA**到**HPA**的转换过程如下图.
 
 ![config](./images/24.png)
 
-在客户机物理地址到宿主机物理地址转换的过程中，由于缺页、写权限不足等原因也会导致客户机退出，产生 EPT 异常。
+![2020-03-17-15-03-04.png](./images/2020-03-17-15-03-04.png)
+
+在**客户机物理地址GPA**到**宿主机物理地址HPA**转换的过程中，由于缺页、写权限不足等原因也会导致客户机退出，产生 **EPT 异常**。
 
 注意: 上面的**EPT TLB**是用来缓存**客户机的GPA**转换成**宿主机的HPA**; 而在这之前, **客户机的GVA转成GPA是可以使用原始TLB？？？**
-
-**EPT页表**用来**GPA→HPA转换**.
 
 ## 4.2. EPT的硬件支持
 
