--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -226,7 +226,7 @@ EPT violation 故障可以发生在下面 **GPA转换HPA！！！** 的环节.
 
 ## 9.2. EPT misconfiguration
 
-由于**EPT paging structure 表项**的内容配置不当, 从而产生 EPT misconfiguration 导致 VM-exit 发生. 当 EPT paging structure 表项属于 "present" (即bits 2:0 不为0值), 并且内容配置为下面情况之一时, 属于 EPT misconfiguration 故障.
+由于**EPT paging structure 表项**的**内容配置不当**, 从而产生 EPT misconfiguration 导致 VM-exit 发生. 当 EPT paging structure 表项属于 "present" (即`bits 2:0` 不为0值), 并且内容配置为下面情况之一时, 属于 EPT misconfiguration 故障.
 
 
 
