--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/2. Cache管理.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/2. Cache管理.md
@@ -1,13 +1,56 @@
 
-由于 VMX 架构下支持对 guest-physical address 的转换, 在原有处理器架构上, 需要增加基于 EPT 扩展页表机制的 cache 管理.
+# 地址转换的两类cache信息
 
-对地址的转换(如线性地址转换物理地址), 处理器可以缓存两类 cache 信息.
+由于 VMX 架构下支持对 **guest-physical address** 的**转换**, 在原有处理器架构上, 需要增加基于 EPT 扩展页表机制的 cache 管理.
+
+对地址的转换(如**线性地址转换物理地址**), 处理器可以缓存两类 cache 信息.
 
 - TLB cache, 或称为 "translation cache". 这类 cache 信息缓存线性地址到物理地址的转换结果. 包括了**线性page number**对应的**物理 page frame 地址值**及 **page frame** 的**访问权限与内存类型**. 例如在4K页面下, 有下面的TLB cache信息:
     - page number(线性地址 `bits 47:12`)对应的4K **page frame**.
     - 合成后的page frame访问权限和内存类型.
 
-- paging-structure cache, 这类 cache 信息缓存 paging structure 页表项内容. 例如在4K页面下, 有下面的paging-structure cache 信息:
+- paging-structure cache, 这类 cache 信息缓存 paging structure **页表项内容**. 例如在4K页面下, 有下面的paging-structure cache 信息:
     - PML4E number(线性地址的 bits 47:39)对应的PML4E.
     - PDPTE number(线性地址的 bits 47:30)对应的PDPTE.
     - PDE number(线性地址的 bits 47:21)对应的PDE.
+
+在 EPT 机制下, guest 使用线性地址访问内存时, 线性地址经过两种地址映射机制转换为平台上的物理地址: 基于 guest paging structure 的 guest-linear address 映射, 以及基于 EPT paging 的guest-physical address映射.
+
+处理器能缓存由这**两种地址映射机制**产生的前面所述**两类 cache 信息**. 即 TLB cache 与 paging-structure cache 信息.
+
+# linear mapping(线性映射)
+
+线性映射是指**线性地址**通过**CR3**引申出来层级的 **paging-structure** 映射到**物理地址空间上**. 通俗来说, 就是**线性地址转换为物理地址**.
+
+由线性地址映射产生下面两类的cache信息(关闭EPT机制):
+
+(1) **linear TLB cache**, 包括了
+
+(2) **linear paging-structure cache**, 
+
+
+当**开启 EPT 机制**时(`secondary processor-based VM-execution`字段的"`enable EPT`"为**1**), 处理器**不会缓存**由**线性映射产生的cache信息**(缓存的是由**combined mapping**产生的**cache信息**). 
+
+也就是当 "`enable EPT`" 为**0！！！** 时(或者在**VMX root operation模式！！！** 里)才会产生**线性映射 cache 信息**.
+
+# guest-physical mapping(guest物理映射)
+
+guest物理映射是指 guest-physical address 通过 EPTP 引申出来层级的 EPT paging structure 映射到物理地址空间上(host-physical address), 也就是**GPA转换为HPA**.
+
+guest-physical mapping 与线性地址的转换无关, 它产生下面两类 cache 信息.
+
+(1) EPT TLB cache. 
+
+(2) EPT paging-structure cache, 
+
+# combined mapping(合并映射)
+
+合并映射 cache 信息是合并了 linear mapping 与 guest-physical mapping 这两种映射 cache 的结果. 
+
+其中**combined TLB** 直接缓存由**guest-linear address** 到 **host-physical address**的转换**结果**. 
+
+同样有下面两类 cache 信息(在启用EPT机制后).
+
+(1) combined TLB cache,
+
+(2) combined paging-structure cache, 
