--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -75,7 +75,7 @@ static int handle_ept_violation(struct kvm_vcpu *vcpu)
         unsigned long exit_qualification;
         gpa_t gpa;
         u64 error_code;
-        // 读取
+        // 读取明细信息
         exit_qualification = vmcs_readl(EXIT_QUALIFICATION);
 
         /*
