--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/10. VM-exit信息类字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/10. VM-exit信息类字段.md
@@ -7,4 +7,16 @@ VMCS 的 VM-exit 信息类字段用来保存发生 **VM-exit 事件**的**原因
 
 ![2020-03-17-16-33-12.png](./images/2020-03-17-16-33-12.png)
 
-如表 3-22 , VM-exit 信息类字段分为6个类别. 如前面, VM-instruction
+如表 3-22 , **VM-exit 信息类字段**分为**6个类别**. 
+
+如前面, `VM-instruction error`字段保存着执行 VMX 指令发生 VMfailValid 失败时的错误原因值. 
+
+当 VMX 指令发生 **VMfailInvaild** 失败时, 不会产生错误原因值.
+
+# 基本信息类字段
+
+包括如下 4 个字段:
+
+(1) exit reason 字段, 32位宽, 保存导致 VM-exit 的原因值.
+
+(2) exit qualification 字段, 属于 natural-width 类型字段, 提供导致 VM-exit 的某些事件的明细信息. 
