--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -3,28 +3,28 @@
 
 <!-- code_chunk_output -->
 
-- [整体介绍](#整体介绍)
-- [Main()函数的关键点](#main函数的关键点)
-  - [main()函数调用流程图](#main函数调用流程图)
-  - [pstack打印堆栈](#pstack打印堆栈)
-- [main()函数](#main函数)
-  - [atexit()注册QEMU退出处理函数](#atexit注册qemu退出处理函数)
-  - [module_call_init机制](#module_call_init机制)
-    - [PC的注册](#pc的注册)
-    - [module_init](#module_init)
-      - [type_init](#type_init)
-      - [kvm_init()](#kvm_init)
-  - [machine_class](#machine_class)
-    - [current_machine](#current_machine)
-  - [pc\_init1函数](#pc_init1函数)
-    - [CPU初始化](#cpu初始化)
-      - [vcpu线程](#vcpu线程)
-    - [内存初始化](#内存初始化)
-- [参考](#参考)
+- [1. 整体介绍](#1-整体介绍)
+- [2. Main()函数的关键点](#2-main函数的关键点)
+  - [2.1. main()函数调用流程图](#21-main函数调用流程图)
+  - [2.2. pstack打印堆栈](#22-pstack打印堆栈)
+- [3. main()函数](#3-main函数)
+  - [3.1. atexit()注册QEMU退出处理函数](#31-atexit注册qemu退出处理函数)
+  - [3.2. module_call_init机制](#32-module_call_init机制)
+    - [3.2.1. PC的注册](#321-pc的注册)
+    - [3.2.2. module_init](#322-module_init)
+      - [3.2.2.1. type_init](#3221-type_init)
+      - [3.2.2.2. kvm_init()](#3222-kvm_init)
+  - [3.3. machine_class](#33-machine_class)
+    - [3.3.1. current_machine](#331-current_machine)
+  - [3.4. pc\_init1函数](#34-pc_init1函数)
+    - [3.4.1. CPU初始化](#341-cpu初始化)
+      - [3.4.1.1. vcpu线程](#3411-vcpu线程)
+    - [3.4.2. 内存初始化](#342-内存初始化)
+- [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
 
-# 整体介绍
+# 1. 整体介绍
 
 参见: `Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md`
 
@@ -32,7 +32,7 @@
 
 前面讲了KVM内核层创建及初始化虚拟机的一些工作过程，现在讲一下QEMU层的流程以及与KVM内核层的配合过程。
 
-# Main()函数的关键点
+# 2. Main()函数的关键点
 
 QEMU通过ioctl()向/dev/kvm发送指令字对虚拟机进行操作，直接抓住这个线看有kvm\_ioctl、kvm\_vm\_ioctl、kvm\_vcpu\_ioctl、kvm\_device\_ioctl等，他们还都在一个C文件里面。
 
@@ -54,7 +54,7 @@ QEMU 的入口`main()`函数位于vl.c中，重点关注以下几点：
 4. 热迁移的 handlers 在何处注册？
 5. 主线程如何监听事件？
 
-## main()函数调用流程图
+## 2.1. main()函数调用流程图
 
 整个main()函数的处理逻辑如下图所示：
 
@@ -111,7 +111,8 @@ int main()
  |   |   |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot, 修改虚拟机注册在内核中的内存
  |   |   |   |       |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
  |   |   |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION) // 与KVM交互, 但是这时候qemu还没有申请内存
- |   |   |   |       |
+ |   |   |   |       ├─ atomic_rcu_set(&as->current_map, new_view); // 设置这个as的current_map
+ |   |   |   |       
  |   |   |   └─ address_space_update_ioeventfds(as)   
  |   |   |
  |   |   ├─ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);   // 初始化 system_io 全局 MemoryRegion
@@ -234,7 +235,7 @@ int main()
 * 中间橙色部分即为根模式下的 Ring 0，即为内核空间中的 KVM，通过VM-Entry进入非根模式，运行 Guest OS，并处理VM-Exit。如果能在内核处理，则处理后再次通过VM-Entry进入 Guest OS；如果不能处理（例如 I/O 请求），则退出到用户空间，由 QEMU 进行处理
 * 右边紫色部分即为非根模式，Guest OS 运行在非根模式下的 Ring 0，所有的敏感指令都被重新定义，以便产生相应的 EXIT_REASON 交给 KVM 处理。Guest OS 中的进程则运行在非根模式下的 Ring 3
 
-## pstack打印堆栈
+## 2.2. pstack打印堆栈
 
 通过virsh启动一台 32 核 CPU 的虚拟机，使用pstack打印堆栈验证一下：
 
@@ -283,7 +284,7 @@ Thread 1 (Thread 0x7fdd47cce700 (LWP 37247)):
 #2  0x0000000000536ef4 in main ()
 ```
 
-# main()函数
+# 3. main()函数
 
 Qemu层是从vl.c中的main()函数开始的，这里通过在代码中添加一些注释的方式来进行讲解。
 
@@ -399,11 +400,11 @@ int main(int argc, charchar **argv, charchar **envp)
 */
 ```
 
-## atexit()注册QEMU退出处理函数
+## 3.1. atexit()注册QEMU退出处理函数
 
 `atexit(qemu_run_exit_notifiers)`注册了qemu的退出处理函数，后面再具体看`qemu_run_exit_notifiers`函数。
 
-## module_call_init机制
+## 3.2. module_call_init机制
 
 module\_call\_init则开始**初始化qemu的各个模块(！！！**)，陆陆续续的有**以下参数(！！！后续都会调用到并进行初始化**)：
 
@@ -457,7 +458,7 @@ void module_call_init(module_init_type type)
 
 那么执行**machine\_init**则是**挂到了MODULE\_INIT\_MACHINE**，**type\_init**则将函数挂载了**MODULE\_INIT\_QOM**。
 
-### PC的注册
+### 3.2.1. PC的注册
 
 那么排查一下是，我们**只关注PC的注册**，那么就是**machine\_init(pc\_machine\_init\_\#\#suffix**)，源自**DEFINE\_PC\_MACHINE(suffix, namestr, initfn, optsfn)宏**会调用
 
@@ -497,7 +498,7 @@ void module_call_init(module_init_type type)
 
 **DEFINE\_PC\_MACHINE**注册的函数**pc\_init\_\#\#suffix**在**DEFINE\_I440FX\_MACHINE中定义**，怎么组合都无关，**pc\_init1(machine**)函数一定要执行，本质就是**pc\_init1赋值给了mc\-\>init**。
 
-### module_init
+### 3.2.2. module_init
 
 而**module\_init**的宏是
 
@@ -520,7 +521,7 @@ static void __attribute__((constructor)) do_qemu_init_ ## function(void) \
 
 它前面的**修饰是\_\_attribute\_\_((constructor**)),这个导致**machine\_init(！！！**)或者**type\_init(！！！**)等会在**main()之前就被执行(！！！**)。
 
-#### type_init
+#### 3.2.2.1. type_init
 
 `kvm-all.c`
 
@@ -528,7 +529,7 @@ static void __attribute__((constructor)) do_qemu_init_ ## function(void) \
 
 所以说**module\_call\_init(MODULE\_INIT\_QOM**)函数**已经完成了kvm\_init的执行(！！！**)，所以这样就**清楚KVM调用关系**了。
 
-#### kvm_init()
+#### 3.2.2.2. kvm_init()
 
 如此就先去看`kvm_init`函数，
 
@@ -544,11 +545,11 @@ static void __attribute__((constructor)) do_qemu_init_ ## function(void) \
 
 到此`kvm_init`的工作就完成了，最主要的工作就是创建的虚拟机。
 
-## machine_class
+## 3.3. machine_class
 
 这样绕了这么大圈，重新回到vl.c上面来，前面刚说了`module_call_init(MODULE_INIT_MACHINE)`本质就是把`pc_init1`赋值给了`mc->init`，然后`machine_class = find_default_machine()`，如此可以看到`machine_class`的init函数一定会执行`pc_init1()`。
 
-### current_machine
+### 3.3.1. current_machine
 
 下面涉及对OPT入参的解析过程略过不提。 qemu准备模拟的[机器的类型](http://oenhan.com/cgroup-src-1)从下面语句获得:
 
@@ -577,7 +578,7 @@ man qemu
            Use "-machine help" to list available machines
 ```
 
-## pc\_init1函数
+## 3.4. pc\_init1函数
 
 下面有**cpu\_exec\_init\_all**就是执行了qemu的**内存结构体的初始化**而已，**cpudef\_init**()则提供了**VCPU的不同型号的模拟**，qemu\_set\_log设置日志输出，**kvm对外的日志**是从**这里配置**的。
 
@@ -585,7 +586,7 @@ man qemu
 
 在**pc\_init1**中重点看**两个函数**，**pc\_cpus\_init**和**pc\_memory\_init**，顾名思义，**CPU和内存的初始化**，中断，vga等函数的初始化先忽略掉，先看这两个。
 
-### CPU初始化
+### 3.4.1. CPU初始化
 
 ```cpp
 void pc_cpus_init(const charchar *cpu_model, DeviceState *icc_bridge)  
@@ -683,7 +684,7 @@ void pc_cpus_init(const charchar *cpu_model, DeviceState *icc_bridge)
 #define type_init(function) module_init(function, MODULE_INIT_QOM)
 ```
 
-#### vcpu线程
+#### 3.4.1.1. vcpu线程
 
 从上面看，**pc\_cpus\_init**函数过程已经理顺了，下面看一下，**vcpu所在的线程**对应的**qemu\_kvm\_cpu\_thread\_fn**中：
 
@@ -765,7 +766,7 @@ kvm\_init\_vcpu就是**获取了vcpu**，将**相关内容填充了env**。
 
 继续qemu\_kvm\_cpu\_thread\_fn, **qemu\_kvm\_init\_cpu\_signals**则是将**中断组合掩码**传递给kvm\_set\_signal\_mask，最终给**内核KVM\_SET\_SIGNAL\_MASK**。kvm\_cpu\_exec此时还在阻塞过程中，先挂起来，看内存的初始化。
 
-### 内存初始化
+### 3.4.2. 内存初始化
 
 **内存初始化**函数是**pc\_memory\_init**, **memory\_region\_init\_ram**传入了**高端内存**和**低端内存**的值，memory\_region\_init负责**填充mr**，重点在**qemu\_ram\_alloc**，即**qemu\_ram\_alloc\_from\_ptr**，首先有**RAMBlock**，ram\_list，那就直接借助find\_ram\_offset函数一起看一下qemu的内存分布模型。
 
@@ -1078,6 +1079,6 @@ return kvm_vm_ioctl(s, KVM_SET_USER_MEMORY_REGION, &mem);
 
 最终，在内核与用户层的配合下完成整个虚拟机的创建和初始化工作，并运行虚拟机。
 
-# 参考
+# 4. 参考
 
 https://blog.csdn.net/mrbuffoon/article/details/53607038?utm_source=distribute.pc_relevant.none-task
