--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -770,6 +770,7 @@ static void address_space_update_topology(AddressSpace *as)
     MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
 
     flatviews_init();
+    // 在哈希表flat_views中根据physmr(key)查找这个view, 如果不存在, 生成新的 flatview
     if (!g_hash_table_lookup(flat_views, physmr)) {
         // 核心函数, 基于root MR生成 flatview
         generate_memory_topology(physmr);
@@ -1943,9 +1944,6 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
 可以看到该函数实现也并不复杂，使用了一个`kvm_userspace_memory_region`对应，该结构本质上作为参数传递给KVM，只是由于不能共享堆栈，在KVM中需要把该结构复制到内核空间，代码本身没什么难度，只是这里如果是**只读的mem**, 需要**调用两次**kvm_vm_ioctl，第一次设置mem的size为0. 
 
 至于为何这么做，可以参考KVM端说明, KVM接收端在`kvm_vm_ioctl()`函数中.
-
-
-
 
 # 6. 总结
 
