--- a/Virtualization/KVM/2. 模块初始化/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化/1. KVM模块初始化.md
@@ -2,7 +2,8 @@
 
 <!-- code_chunk_output -->
 
-- [1. 整体介绍](#1-整体介绍)
+- [1. 原理介绍](#1-原理介绍)
+- [整体流程](#整体流程)
 - [2. kvm_init: 初始化 kvm 框架](#2-kvm_init-初始化-kvm-框架)
   - [2.1. 架构初始化: kvm_arch_init](#21-架构初始化-kvm_arch_init)
     - [2.1.1. CPU特性支持检查](#211-cpu特性支持检查)
@@ -34,15 +35,39 @@
 
 <!-- /code_chunk_output -->
 
-# 1. 整体介绍
+# 1. 原理介绍
 
-核心数据结构和主要流程见:
+KVM模块分为三个主要模块：kvm.ko、kvm\-intel.ko和kvm\-amd.ko，这三个模块在初始化阶段的流程如图5\-4所示。
 
-`Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md`
+￼图5\-4 KVM模块初始化阶段:
 
-`Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md`
+![2019-07-05-21-29-03.png](./images/2019-07-05-21-29-03.png)
+
+**KVM模块**可以**编译进内核**中，也可以作为**内核模块**在Linux系统启动完成**之后加载**。加载时，KVM 根据主机所用的体系架构是 Intel的 VMX技术还是AMD的SVM技术，会采用略微不同的加载流程。
+
+Linux的**子模块入口**通常通过**module\_init**宏进行定义，由**内核进行调用**。KVM的初始化流程如图5\-5所示。
+￼
+图5\-5 KVM的初始化流程:
 
 ![2019-12-11-11-04-37.png](./images/2019-12-11-11-04-37.png)
+
+KVM的初始化步骤分为以下三步。
+
+1）在**平台相关的KVM模块**中通过**module\_init宏**正式进入KVM的初始化阶段，并且执行相关的**硬件初始化准备**。(arch/x86/kvm/vmx.c)
+
+2）进入**kvm\_main.c**中的**kvm\_init**函数进行正式的初始化工作，期间进行了一系列子操作。(virt/kvm/kvm\_main.c)
+
+注: vmx.c中定义了一个结构体`vmx_x86_ops`, 这是函数指针集合(各种操作的集合). 初始化很多动作以及iotcl调用也都会用到这些函数. 作为参数传给`kvm_init()`, 再传给`kvm_arch_init()`, 在传递到全局变量`kvm_x86_ops`. 可以见4的说明
+
+* 通过**kvm\_arch\_init**函数初始化KVM内部的一些数据结构：**注册全局变量kvm\_x86\_ops**、**初始化MMU**等数据结构、**初始化Timer定时器**架构。(arch/x86/kvm/x86.c)
+* 分配KVM内部操作所需要的**内存空间**。
+* 调用kvm\_x86\_ops的**hardware\_setup**函数进行具体的硬件体系结构的初始化工作。
+* 注册**sysfs**和**devfs**等API接口信息。
+* 最后初始化**debugfs**的调试信息。
+
+3）进行后续的硬件初始化准备操作。
+
+# 整体流程
 
 ```
 vmx_init()                               // 初始化入口
