--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/5. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. 代码分析.md
@@ -33,8 +33,7 @@
 
 # 1. KVM模块初始化流程
 
-
-
+先有KVM相关模块的初始化. 从而生成`/dev/kvm`文件句柄给用户空间使用.
 
 # 2. QEMU与KVM交互
 
@@ -42,7 +41,7 @@ KVM内核模块加载之后只提供了一个对外接口/dev/kvm，qemu通过/d
 
 所以存在三种句柄: KVM访问句柄、虚拟机访问句柄和vCPU访问句柄
 
-![2019-12-11-15-33-58.png](./images/2019-12-11-15-33-58.png)
+![](./images/2019-06-04-15-01-11.png)
 
 整体流程是:
 
