--- a/Virtualization/KVM/2. 模块初始化/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化/1. KVM模块初始化.md
@@ -3,35 +3,35 @@
 <!-- code_chunk_output -->
 
 - [1. 原理介绍](#1-原理介绍)
-- [整体流程](#整体流程)
-- [2. kvm_init: 初始化 kvm 框架](#2-kvm_init-初始化-kvm-框架)
-  - [2.1. 架构初始化: kvm_arch_init](#21-架构初始化-kvm_arch_init)
-    - [2.1.1. CPU特性支持检查](#211-cpu特性支持检查)
-    - [2.1.2. kmem_cache分配(x86_fpu)](#212-kmem_cache分配x86_fpu)
-    - [2.1.3. percpu kvm_shared_msrs](#213-percpu-kvm_shared_msrs)
-    - [2.1.4. mmu 模块相关处理](#214-mmu-模块相关处理)
-    - [2.1.5. 设置全局的 kvm_x86_ops](#215-设置全局的-kvm_x86_ops)
-    - [2.1.6. 设置 MMU 的shadow PTE masks](#216-设置-mmu-的shadow-pte-masks)
-    - [2.1.7. timer初始化](#217-timer初始化)
-    - [2.1.8. lapic初始化](#218-lapic初始化)
-  - [2.2. workqueue?](#22-workqueue)
-  - [2.3. 架构相关的硬件设置](#23-架构相关的硬件设置)
-    - [2.3.1. vmx/svm 的硬件配置 hardware_setup()](#231-vmxsvm-的硬件配置-hardware_setup)
-        - [2.3.1.1. 设置全局 vmcs_config 和 vmx_capability](#2311-设置全局-vmcs_config-和-vmx_capability)
-        - [2.3.1.2. 一堆检查](#2312-一堆检查)
-        - [2.3.1.3. posted 中断的 wakeup 处理函数设置](#2313-posted-中断的-wakeup-处理函数设置)
-        - [2.3.1.4. percpu的VMXON region](#2314-percpu的vmxon-region)
-    - [2.3.2. msr保存到全局变量msrs_to_save[]数组](#232-msr保存到全局变量msrs_to_save数组)
-  - [2.4. 检查每个处理器对vmx的兼容性](#24-检查每个处理器对vmx的兼容性)
-  - [2.5. 注册CPU状态变化的通知函数](#25-注册cpu状态变化的通知函数)
-  - [2.6. 注册reboot时候的通知函数](#26-注册reboot时候的通知函数)
-  - [2.7. 给kvm_vcpu分配cache](#27-给kvm_vcpu分配cache)
-  - [2.8. 赋值file_operations的模块名](#28-赋值file_operations的模块名)
-  - [2.9. 注册设备文件/dev/kvm](#29-注册设备文件devkvm)
-  - [2.10. 动作注册](#210-动作注册)
-  - [2.11. debugfs初始化](#211-debugfs初始化)
-  - [2.12. vfio操作初始化](#212-vfio操作初始化)
-- [3. 参考](#3-参考)
+- [2. 整体流程](#2-整体流程)
+- [3. kvm_init: 初始化 kvm 框架](#3-kvm_init-初始化-kvm-框架)
+  - [3.1. 架构初始化: kvm_arch_init](#31-架构初始化-kvm_arch_init)
+    - [3.1.1. CPU特性支持检查](#311-cpu特性支持检查)
+    - [3.1.2. kmem_cache分配(x86_fpu)](#312-kmem_cache分配x86_fpu)
+    - [3.1.3. percpu kvm_shared_msrs](#313-percpu-kvm_shared_msrs)
+    - [3.1.4. mmu 模块相关处理](#314-mmu-模块相关处理)
+    - [3.1.5. 设置全局的 kvm_x86_ops](#315-设置全局的-kvm_x86_ops)
+    - [3.1.6. 设置 MMU 的shadow PTE masks](#316-设置-mmu-的shadow-pte-masks)
+    - [3.1.7. timer初始化](#317-timer初始化)
+    - [3.1.8. lapic初始化](#318-lapic初始化)
+  - [3.2. workqueue?](#32-workqueue)
+  - [3.3. 架构相关的硬件设置](#33-架构相关的硬件设置)
+    - [3.3.1. vmx/svm 的硬件配置 hardware_setup()](#331-vmxsvm-的硬件配置-hardware_setup)
+        - [3.3.1.1. 设置全局 vmcs_config 和 vmx_capability](#3311-设置全局-vmcs_config-和-vmx_capability)
+        - [3.3.1.2. 一堆检查](#3312-一堆检查)
+        - [3.3.1.3. posted 中断的 wakeup 处理函数设置](#3313-posted-中断的-wakeup-处理函数设置)
+        - [3.3.1.4. percpu的VMXON region](#3314-percpu的vmxon-region)
+    - [3.3.2. msr保存到全局变量msrs_to_save[]数组](#332-msr保存到全局变量msrs_to_save数组)
+  - [3.4. 检查每个处理器对vmx的兼容性](#34-检查每个处理器对vmx的兼容性)
+  - [3.5. 注册CPU状态变化的通知函数](#35-注册cpu状态变化的通知函数)
+  - [3.6. 注册reboot时候的通知函数](#36-注册reboot时候的通知函数)
+  - [3.7. 给kvm_vcpu分配cache](#37-给kvm_vcpu分配cache)
+  - [3.8. 赋值file_operations的模块名](#38-赋值file_operations的模块名)
+  - [3.9. 注册设备文件/dev/kvm](#39-注册设备文件devkvm)
+  - [3.10. 动作注册](#310-动作注册)
+  - [3.11. debugfs初始化](#311-debugfs初始化)
+  - [3.12. vfio操作初始化](#312-vfio操作初始化)
+- [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
 
@@ -67,7 +67,7 @@ KVM的初始化步骤分为以下三步。
 
 3）进行后续的硬件初始化准备操作。
 
-# 整体流程
+# 2. 整体流程
 
 ```
 vmx_init()                               // 初始化入口
@@ -111,7 +111,7 @@ vmx_init()                               // 初始化入口
  └─ vmx_check_vmcs12_offsets()
 ```
 
-# 2. kvm_init: 初始化 kvm 框架
+# 3. kvm_init: 初始化 kvm 框架
 
 在`virt/kvm/kvm_main.c`中
 
@@ -125,7 +125,7 @@ r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx)
 
 正式进行KVM框架初始化
 
-## 2.1. 架构初始化: kvm_arch_init
+## 3.1. 架构初始化: kvm_arch_init
 
 使用传入的`vmx_x86_ops`参数, 注意这是`void *`类型的
 
@@ -135,7 +135,7 @@ r = kvm_arch_init(opaque);
 
 主要是架构相关的检查和初始化
 
-### 2.1.1. CPU特性支持检查
+### 3.1.1. CPU特性支持检查
 
 ```cpp
 // CPUID.1:ECX.VMX[bit 5] -> VT 必须支持
@@ -146,7 +146,7 @@ ops->disable_by_bios();
 !boot_cpu_has(x86_FEATURE_FPU) || !boot_cpu_has(X86_FEATURE_FXSR);
 ```
 
-### 2.1.2. kmem_cache分配(x86_fpu)
+### 3.1.2. kmem_cache分配(x86_fpu)
 
 ```cpp
 // arch/x86/kvm/x86.c
@@ -156,14 +156,14 @@ EXPORT_SYMBOL_GPL(x86_fpu_cache);
 x86_fpu_cache = kmem_cache_create("x86_fpu", ...)
 ```
 
-### 2.1.3. percpu kvm_shared_msrs
+### 3.1.3. percpu kvm_shared_msrs
 
 ```cpp
 static struct kvm_shared_msrs __percpu *shared_msrs;
 shared_msrs = alloc_percpu(struct kvm_shared_msrs);
 ```
 
-### 2.1.4. mmu 模块相关处理
+### 3.1.4. mmu 模块相关处理
 
 ```cpp
 // arch/x86/kvm/x86.c
@@ -187,7 +187,7 @@ int kvm_mmu_module_init(void)
 }
 ```
 
-### 2.1.5. 设置全局的 kvm_x86_ops
+### 3.1.5. 设置全局的 kvm_x86_ops
 
 ```cpp
 struct kvm_x86_ops *kvm_x86_ops __read_mostly;
@@ -196,38 +196,38 @@ EXPORT_SYMBOL_GPL(kvm_x86_ops);
 kvm_x86_ops = ops;
 ```
 
-### 2.1.6. 设置 MMU 的shadow PTE masks
+### 3.1.6. 设置 MMU 的shadow PTE masks
 
 ```cpp
 // 设置MMU的shadow PTE masks
 kvm_mmu_set_mask_ptes();
 ```
 
-### 2.1.7. timer初始化
+### 3.1.7. timer初始化
 
 ```cpp
 kvm_timer_init();
 ```
 
-### 2.1.8. lapic初始化
+### 3.1.8. lapic初始化
 
 ```cpp
 kvm_lapic_init();
 ```
 
-## 2.2. workqueue?
+## 3.2. workqueue?
 
 ```
 kvm_irqfd_init();
 ```
 
-## 2.3. 架构相关的硬件设置
+## 3.3. 架构相关的硬件设置
 
 ```cpp
 kvm_arch_hardware_setup();
 ```
 
-### 2.3.1. vmx/svm 的硬件配置 hardware_setup()
+### 3.3.1. vmx/svm 的硬件配置 hardware_setup()
 
 实际上调用的是 
 
@@ -235,7 +235,7 @@ kvm_arch_hardware_setup();
 kvm_x86_ops->hardware_setup();
 ```
 
-##### 2.3.1.1. 设置全局 vmcs_config 和 vmx_capability
+##### 3.3.1.1. 设置全局 vmcs_config 和 vmx_capability
 
 ```cpp
 // arch/x86/kvm/vmx/capabilities.h
@@ -249,15 +249,15 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 
 这里的这两个全局变量不是指针, 而是真正值, 所以就直接分配了内存
 
-##### 2.3.1.2. 一堆检查
+##### 3.3.1.2. 一堆检查
 
-##### 2.3.1.3. posted 中断的 wakeup 处理函数设置
+##### 3.3.1.3. posted 中断的 wakeup 处理函数设置
 
 ```cpp
 kvm_set_posted_intr_wakeup_handler(wakeup_handler);
 ```
 
-##### 2.3.1.4. percpu的VMXON region
+##### 3.3.1.4. percpu的VMXON region
 
 ```cpp
 alloc_kvm_area();
@@ -280,7 +280,7 @@ struct vmcs {
 DECLARE_PER_CPU(struct vmcs *, current_vmcs);
 ```
 
-### 2.3.2. msr保存到全局变量msrs_to_save[]数组
+### 3.3.2. msr保存到全局变量msrs_to_save[]数组
 
 ```cpp
 kvm_init_msr_list();
@@ -288,7 +288,7 @@ kvm_init_msr_list();
 
 通过`rdmr_safe()`把msr保存到**全局**变量`msrs_to_save[]`数组.
 
-## 2.4. 检查每个处理器对vmx的兼容性
+## 3.4. 检查每个处理器对vmx的兼容性
 
 ```cpp
 for_each_online_cpu(cpu) {
@@ -302,7 +302,7 @@ for_each_online_cpu(cpu) {
 
 最终调用`vmx_check_processor_compat`, 检查处理器的兼容性
 
-## 2.5. 注册CPU状态变化的通知函数
+## 3.5. 注册CPU状态变化的通知函数
 
 ```cpp
 r = cpuhp_setup_state_nocalls(CPUHP_AP_KVM_STARTING, "kvm/cpu:starting",
@@ -365,7 +365,7 @@ static void hardware_disable_nolock(void *junk)
 }
 ```
 
-## 2.6. 注册reboot时候的通知函数
+## 3.6. 注册reboot时候的通知函数
 
 原理同上, 重启的时候会调用这个函数
 
@@ -373,7 +373,7 @@ static void hardware_disable_nolock(void *junk)
 register_reboot_notifier(&kvm_reboot_notifier);
 ```
 
-## 2.7. 给kvm_vcpu分配cache
+## 3.7. 给kvm_vcpu分配cache
 
 根据注释, 主要为了满足`fx_save`的对齐要求
 
@@ -391,7 +391,7 @@ kvm_vcpu_cache =
 
 后面会给创建vcpu时候使用, 该cache的arch部分可被拷贝到用户态使用. 这里的`vcpu_size`是`sizeof(struct vcpu_vmx)`
 
-## 2.8. 赋值file_operations的模块名
+## 3.8. 赋值file_operations的模块名
 
 把早先传给`kvm_init()`的参数THIS_MODULE, 也就是**vmx的模块名**分别赋值给三个file operation结构体变量:
 
@@ -433,7 +433,7 @@ static struct file_operations kvm_chardev_ops = {
 };
 ```
 
-## 2.9. 注册设备文件/dev/kvm
+## 3.9. 注册设备文件/dev/kvm
 
 ```cpp
 misc_register(&kvm_dev);
@@ -457,7 +457,7 @@ static struct miscdevice kvm_dev = {
 };
 ```
 
-## 2.10. 动作注册
+## 3.10. 动作注册
 
 ```cpp
 register_syscore_ops(&kvm_syscore_ops);
@@ -495,7 +495,7 @@ static __read_mostly struct preempt_ops kvm_preempt_ops;
 
 从命名看, `sched_in`和`sched_out`可以申请调度器对任务的换入换出.
 
-## 2.11. debugfs初始化
+## 3.11. debugfs初始化
 
 ```cpp
 kvm_init_debug();
@@ -531,7 +531,7 @@ static int kvm_init_debug(void)
 struct kvm_stats_debugfs_item debugfs_entries[] = {
 ```
 
-## 2.12. vfio操作初始化
+## 3.12. vfio操作初始化
 
 ```cpp
 kvm_vfio_ops_init();
@@ -543,6 +543,6 @@ kvm_vfio_ops_init();
 kvm_register_device_ops(&kvm_vfio_ops, KVM_DEV_TYPE_VFIO);
 ```
 
-# 3. 参考
+# 4. 参考
 
 https://www.haodong.org/kvm%E6%BA%90%E4%BB%A3%E7%A0%81%E9%98%85%E8%AF%BB%E7%AC%94%E8%AE%B0/
