--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
+++ b/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
@@ -8,7 +8,7 @@
   - [2.1. kvm_run结构体](#21-kvm_run结构体)
   - [2.2. kvm_vcpu_arch](#22-kvm_vcpu_arch)
 - [3. 结构体之间的关系](#3-结构体之间的关系)
-- [struct](#struct)
+- [struct vmcs_host_state: VMEXIT时加载的host状态](#struct-vmcs_host_state-vmexit时加载的host状态)
 - [4. kvm_x86_ops结构体](#4-kvm_x86_ops结构体)
 - [5. KVM API中重要的结构体](#5-kvm-api中重要的结构体)
   - [5.1. kvm_chardev_ops](#51-kvm_chardev_ops)
@@ -698,7 +698,27 @@ static int nested_vmx_run(struct kvm_vcpu *vcpu, bool launch)
 }
 ```
 
-# struct v
+# struct vmcs_host_state: VMEXIT时加载的host状态
+
+```cpp
+/*
+ * vmcs_host_state tracks registers that are loaded from the VMCS on VMEXIT
+ * and whose values change infrequently, but are not constant.  I.e. this is
+ * used as a write-through cache of the corresponding VMCS fields.
+ */
+struct vmcs_host_state {
+        unsigned long cr3;      /* May not match real cr3 */
+        unsigned long cr4;      /* May not match real cr4 */
+        unsigned long gs_base;
+        unsigned long fs_base;
+        unsigned long rsp;
+
+        u16           fs_sel, gs_sel, ldt_sel;
+#ifdef CONFIG_X86_64
+        u16           ds_sel, es_sel;
+#endif
+};
+```
 
 # 4. kvm_x86_ops结构体
 
